# album-mastering-studio

./: .gitignore  AGENTS.md  LOOK_HERE_DAN_HANDOFF.md  README.md  compass_artifact_wf-0dd25647-771b-4682-8d9d-4d900af5f667_text_markdown.md  deep-research-report-modern-mastering.md  pyproject.toml
desktop/: index.html  package-lock.json  package.json
desktop/engine/: engine_entry.py
desktop/scripts/: prepare-sidecars.ps1
desktop/src/: App.tsx  livePreviewConfig.json  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: dsp.rs  lib.rs  main.rs
desktop/src-tauri/tests/: character_parity.rs  eq_parity.rs  mbc_parity.rs
desktop/tests/: cli-contract.test.mjs  listening-handoff-browser-audio-smoke.mjs  live-preview-model.mjs  tauri-msi-package-smoke.mjs  tauri-native-stress-smoke.mjs  tauri-nsis-install-smoke.mjs  tauri-project-persistence-smoke.mjs  tauri-real-song-album-codec-qc-smoke.mjs  tauri-real-song-album-performance-smoke.mjs  tauri-real-song-album-ui-smoke.mjs  tauri-real-song-codec-qc-smoke.mjs  (+15 more)
docs/: ENGINE_DECISION_RECORD.md  GOAL_AUDIT.md  IMPLEMENTATION_PLAN.md  MANUAL_LISTENING_TEST_GUIDE.md  MIGRATION_PLAN.md  NEW_AGENT_WORKFLOW.md  OFFICE_BUILD_HANDOFF.md  PARALLEL_BUILD_NOTES.md  PRODUCT.md  PRODUCT_FEATURES_combined.md  PRODUCT_PLAN_old.md  RELEASE_CANDIDATE_CLOSEOUT.md  UI_WORKFLOW_EXPLAINER.md  codex-active-handoff.md  most-recent-mastering-app-research.md  progress.md
scripts/: release-readiness.ps1
tests/: test_pipeline.py
(+17 files in other folders)
