[package]
name = "album-mastering-studio"
version = "0.1.0"
description = "Tauri shell for the local Album Mastering Studio Python engine"
authors = ["Daniel Kinsner"]
edition = "2021"

[lib]
name = "album_mastering_studio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.15.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
